<resources>
    <string name="app_name">Group20_HW03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewCity">City, Country</string>
    <string name="textViewTemp">Temperature</string>
    <string name="textViewTempMax">Temperature Max</string>
    <string name="textViewTempMin">Temperature Min</string>
    <string name="textViewDescription">Description</string>
    <string name="textViewHumidity">Humidity</string>
    <string name="textViewWindSpeed">Wind Speed</string>
    <string name="textViewWindDegree">Wind Degree</string>
    <string name="textViewCloudiness">Cloudiness</string>
    <string name="buttonCheckForecast">Check Forecast</string>
    <string name="temp">temp</string>
    <string name="tempMax">tempMax</string>
    <string name="tempMin">tempMin</string>
    <string name="description">description</string>
    <string name="humidity">humidity</string>
    <string name="windSpeed">windSpeed</string>
    <string name="windDegree">windDegree</string>
    <string name="cloudiness">cloudiness</string>
    <string name="textViewDateTime">Date Time</string>
</resources>